Removed final instances of 'PR'.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -553,13 +553,13 @@ A similar approach was used by the stage 2.1 investigation as was used by the st
 
 \begin{enumerate}
 	\item \textbf{Seated VR scenario} - Participants explore the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring theier view of the RW chapel around them.
-	\item \textbf{PR scenario with transitions 1-3} - Participants experience the RW and VR chapels in tandem using the Mirrorshades platform. They wear the DK1, holding the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen is 100\% RW and they are granted access to 3x different transition styles;
+	\item \textbf{Parallel reality scenario with transitions 1-3} - Participants experience the RW and VR chapels in tandem using the Mirrorshades platform. They wear the DK1, holding the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen is 100\% RW and they are granted access to 3x different transition styles;
 	\begin{enumerate}
 		\item Hard switch (section \ref{sub-hardswitch}) mapped to controller \texttt{[A]} button (transition 1).
 		\item Transition with linear interpolation (section \ref{transition-with-linear-interpolation}) mapped to controller \texttt{[B]} button (transition 2).
 		\item Analogue selectable opacity (section \ref{analogue-selectable-opacity}) mapped to controller right trigger \texttt{[RT]} (transition 3).
 \end{enumerate}
-	\item \textbf{PR scenario with transitions 1-4} - Participants experience the same scenario as scenario 3, however this time with the introduction of the periodic hard switch (section \ref{subsub-periodic}, transition 4) which triggers a 0.15 second transition to 100\% VR every 3 seconds. The 3 second timer is reset each time the user manually triggers a transition using any one of transitions 1-3.
+	\item \textbf{Parallel reality scenario with transitions 1-4} - Participants experience the same scenario as scenario 3, however this time with the introduction of the periodic hard switch (section \ref{subsub-periodic}, transition 4) which triggers a 0.15 second transition to 100\% VR every 3 seconds. The 3 second timer is reset each time the user manually triggers a transition using any one of transitions 1-3.
 \end{enumerate}
 
 In the parallel reality scenario with transitions 1-3 pressing and holding the \texttt{[A]} button triggered a hard switch from 100\% RW to 100\% VR, pressing and holding the \texttt{[B]} button triggered a linear interpolated switch from 100\% RW to 100\% VR and pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled (pulling the trigger all the way in would reduce the opacity of the objects to 0\% and thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% and thus display 66\% RW and 33\% VR, etc.). In the parallel reality scenario with transitions 1-4 participants were granted access to the same 3x transitions via the Xbox controller and additionally the 4th transition of the periodic hard switch was triggered every 3 seconds for a duration of 0.15 seconds. These two scenarios are referred to as `scenario 1-3' and `scenario 1-4' respectively in the following discussion.
@@ -1104,8 +1104,8 @@ Stage 2.2 followed the same pattern as stage 2.1, with participants engaging in 
 
 \begin{enumerate}
 	\item \textbf{Seated VR scenario} - Participants explore the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring their view of the RW chapel around them.
-	\item \textbf{PR scenario with 75\% RW/25\% VR default view} - (Referred to as the `75/25 scenario') Participants experience the RW and VR chapels in tandem using the Mirrorshades platform. They wear the DK1, hold the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen is 75\% RW/25\% VR, achieved by setting the base opacity of the objects upon which the camera feeds are rendered to 75\%. The participants are furnished with a single transition style, the transition with linear interpolation (transition 2 from the stage 2.1 evaluation).
-	\item \textbf{PR scenario with 50\% RW/50\% VR default view} - (Referred to as the `50/50 scenario') Participants undertake the same scenario as the 75/25 scenario, except that the default view on the DK1 screen is 50\% RW/50\% VR, achieved by setting the base opacity of the objects upon which the camera feeds are rendered to 50\%. Participants are again fashioned with the linear interpolated transition as the only transition style.
+	\item \textbf{Parallel reality scenario with 75\% RW/25\% VR default view} - (Referred to as the `75/25 scenario') Participants experience the RW and VR chapels in tandem using the Mirrorshades platform. They wear the DK1, hold the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen is 75\% RW/25\% VR, achieved by setting the base opacity of the objects upon which the camera feeds are rendered to 75\%. The participants are furnished with a single transition style, the transition with linear interpolation (transition 2 from the stage 2.1 evaluation).
+	\item \textbf{Parallel reality scenario with 50\% RW/50\% VR default view} - (Referred to as the `50/50 scenario') Participants undertake the same scenario as the 75/25 scenario, except that the default view on the DK1 screen is 50\% RW/50\% VR, achieved by setting the base opacity of the objects upon which the camera feeds are rendered to 50\%. Participants are again fashioned with the linear interpolated transition as the only transition style.
 \end{enumerate}
 
 As the controlled variable between the two parallel reality scenarios is opacity based, it was decided not to fashion the participants with the ability to consciously affect opacity by giving them access to the analogue selectable opacity feature (transition 3 from the stage 2.1 evaluation). In the same manner as during stage 2.1, participants were simply instructed to make their way from the starting position down to the altar end of the chapel, with no hard restrictions upon their path or when and where they were to stop and pay attention to particular aspects of their surroundings.
