Added discussion of Waterworth's 'On Feeling (the) Present'.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -487,15 +487,15 @@ Parallel Reality (PR) & Systems comprising two environments, one real and the ot
 
 %\subsection{Presence}
 \label{lit-review-presencec}
-Any investigation into alternate realities is likely to involve discussion of the experiential aspects of these new realities and parallel reality is no exception. The concept of \textit{presence}, the subjective experience of `being in' one place or environment even when one is physically situated in another~\cite{Witmer1998}, features prominently in such discussions. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding and vivd the virtual environment is, or the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
+Any investigation into alternate realities is likely to involve discussion of the experiential aspects of these new realities and parallel reality is no exception. The concept of \textit{presence}, the subjective experience of `being in' one place or environment even when one is physically situated in another~\cite{Witmer1998}, , features prominently in such discussions. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding and vivd the virtual environment is, or the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
 
 Also related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy and attention on a coherent set of stimuli and it is theorized that both involvement and immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
 
 \subsection{Waterworth and Waterworth's Three Dimensions of Virtual Experience}
 \label{waterworthandwaterworth}
-\newcommand{\presencefootnote}{\footnote{\textbf{Presence} in the context of this model is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, whether these environmental stimuli originate from a real environment, a virtual environment, a mixed reality environment, or even from multiple discrete environments.}}
+\newcommand{\presencefootnote}{\footnote{\textbf{Presence} in the context of this model is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, covering cases both in which the environmental stimuli originate from the subject's immediate real surroundings (\textit{unmediated presence}) and when the environmental stimuli originate from a remote real environment, virtual environment or mixed reality environment (\textit{mediated presence})~\cite{Mantovani2010}.}}
 
-\newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}.}}
+\newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}, with total presence (in the above definition) and total absence representing opposite poles along the continuum of the focus of attention axis~\cite{Mantovani2010}.}}
 
 Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model (figure \ref{focus-locus-sensus-original}) for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in the wider alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience, which allows the separate consideration of which environment a user is attending to the stimuli of and how \textit{much} they are attending to these stimuli (wherever they may come from), is diagnostic in the investigation of the experience of parallel reality systems that promote the transition between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned.
 
