--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -516,11 +516,19 @@ Under these categories one can consider the log data recorded by the Mirrorshade
 
 \subsection{Presence Questionnaires}
 
-Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to full immersion VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible, but in fact complimentary. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with and suppressing the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to it and can be attended to in tandem.
+Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to full immersion VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible, but rather complimentary. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, likely incompatible with and requiring suppression of the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to the RW model and can be attended to in tandem.
 
-This distinction is perhaps best explained as a difference in the use of the term `presence', \textit{``which is often used to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}, which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence, considered under the original Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}), is a shift upon the locus of attention axis from VR to RW. In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the second of Waterworth and Waterworth's definitions, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studies the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention. Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation instead needs to employ a questionnaire that provides insight into the balance between presence (whether real or virtual) and absence.
+The effect of the complimentary nature of the environments can be considered within the context of Waterworth and Waterworth's `three layers of presence'~\cite{Mantovani2010}, proprioceptive, perceptual and reflective, which builds upon Damasio's evolutionary levels of selfhood~\cite{Damasio1999} and reasons that;
 
-Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a parallel reality scenario. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
+\begin{quote}
+\textit{``Presence is maximised when all three layers are integrated around the same external situation, whether this is physical reality, virtual reality, or a mixture of the two.''}~\cite{Mantovani2010}
+\end{quote}
+
+While RW experiences rarely feature conflict between the proprioceptive and core presence layers, VR experiences often present such conflict due to mismatch between physical actions and perceived (virtual) results owing to the conflicting content of the two environments. A parallel reality system whose two constituent environments share high spatial equivalence however, should not present such a mismatch between proprioceptive and core presence layers.
+
+The implication this has upon the suitability of established presence questionnaires is perhaps best explained as a difference in the use of the term `presence', with many authors using the term to mean only mediated presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}, a situation which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence, considered under the original Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}), is a shift upon the locus of attention axis from VR to RW. In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the second of Waterworth and Waterworth's definitions, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studies the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
+
+Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation instead needs to employ a questionnaire that provides insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a parallel reality scenario. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
 
 Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses several questions that directly enquire about aspects of the virtual environment (\textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR and RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism and of how well bodily actions were represented as possible in the VR environment). Other questionnaires such as that used in an experiment by Slater and Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment with a neutral questioning tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this permeates an `either or' implication to the two environments, emphasising incompatibility and separateness.
 
