Additional references to Virtual Space (Qvortrup).

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -37,7 +37,7 @@ Participants were sourced by adverts disseminated via an internal university mem
 
 \section{Stage 1 - Parallel Reality for Virtual Heritage}
 
-Previously when immersive VR has been employed in virtual heritage scenarios it has predominantly been implemented as CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre are presented the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of a location, its contents and actors. Some of these CAVE installations have featured physical control interfaces such as joystick and 3D mouse~\cite{cabral:x3dexperience} and haptic interfaces~\cite{Christou2006}, while others have tracked user movement, whether head only or full body  gestures (such as the OVW group's VTTP platform shown in figure \ref{VTTP_projection.png}). In common among these CAVE experiences is that the VR content they present is experienced with a disconnect to the RW site to which it pertains, as the CAVE itself completely immerses users in VR visuals and does not permit them to see any of their RW surroundings, comparable to the experience of wearing a VR HMD without see-through video functionality. Furthermore the physical size of a CAVE limits the amount in any particular direction that a user can physically move, even if movement is encouraged due to its use as a control methodology. This presents a hindrance to the on-site comparison of real and virtual content, as it introduces both temporal and spatial separation between a user's experiences of the VR content and the corresponding RW environment.
+Previously when immersive VR has been employed in virtual heritage scenarios it has predominantly been implemented as CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre are presented the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of a location, its contents and actors. Some of these CAVE installations have featured physical control interfaces such as joystick and 3D mouse~\cite{cabral:x3dexperience} and haptic interfaces~\cite{Christou2006}, while others have tracked user movement, whether head only or full body  gestures (such as the OVW group's VTTP platform shown in figure \ref{VTTP_projection.png}). In common among these CAVE experiences is that the VR content they present is experienced with a disconnect to the RW site to which it pertains, as the CAVE itself completely immerses users in VR visuals and does not permit them to see any of their RW surroundings, comparable to the experience of wearing a VR HMD without see-through video functionality. Furthermore the physical size of a CAVE limits the amount in any particular direction that a user can physically move, `prisoned' in Tzortzaki's language~\cite{Tzortzaki2002}, even if movement is encouraged due to its use as a control methodology. This presents a hindrance to the on-site comparison of real and virtual content, as it introduces both temporal and spatial separation between a user's experiences of the VR content and the corresponding RW environment.
 
 With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use at cultural heritage sites for achieving similar experiences to previous CAVE installations is becoming more plausible and brings with it certain benefits such as a reduction in the physical space required at the site for the installation. The OVW group's experience with presenting both experts and interested amateurs with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. These interactions have taken place in scenarios similar to those of existing cultural heritage CAVE scenarios; the user remains physically stationary and uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe the RW environment due to the nature of the HMD isolating them from RW visual stimuli.
 
