--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -70,7 +70,7 @@ Although many applications of augmented reality to cultural heritage sites are m
 
 %=========================================================================================================
 
-VR is not only useful for virtual heritage where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also allows for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006} allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
+VR has been used in virtual heritage not only where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also to allow for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006}, which can be situated at the site itself and create of a `space of illusion'~\cite{Tzortzaki2002}, allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
 
 Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to amateur observers in museums and visitor centres, performance is often more important than historical accuracy.
 
@@ -149,7 +149,7 @@ In addition to these temporary workshops, the reconstructions have also been use
 
 %Can we take the idea of sitsim, use it to leverage existing Second Life/OpenSim content, to produce a viable parallel reality experience?
 
-Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both), with occasional exceptions such as sitsim. The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
+Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both), with sitsim representing one of the few exceptions. The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
 
 Applying the concept of parallel reality to virtual heritage, possibly via a sitsim style interface, represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13, while allowing investigation into the parallel reality concept in a real world use case situation. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of viruality, as the user is provided the ability to alternatively view the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
 
@@ -947,7 +947,7 @@ Revisiting the definition of parallel reality, one can consider it to be disting
 	\item The experiential aspect - can the user freely switch between the environments?
 \end{enumerate}
 
-Although the VTW platform was developed as a preliminary implementation of the parallel reality concept and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, after experimenting with the platform at St Andrews Cathedral the experience of using the system falls short of the ideal realisation of the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment is instead seen as a window within the wider real environment: even when focussing attention upon the virtual environment via the device's screen, you are also perceiving the real environment around it filling the majority of the viewport. This experience is more of \textit{mixing} (even if that mixing is performed by the human mind and not by the device) than \textit{switching} to a complete/discrete environment at the exclusion of the other. With augmented reality, even indirect augmented reality, and with the sitsim projects and VTW, the user's view is always a mix, never purely virtual and the position upon the locus of attention axis can never reach its virtual reality extreme. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms clarifies how from the point of view of user experience, sitsim projects have been labelled as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
+Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, after experimenting with the platform at St Andrews Cathedral the experience of using the system falls short of the ideal realisation of the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment is instead seen as a window within the wider real environment: even when focussing attention upon the virtual environment via the device's screen, one also perceives the real environment around it filling the majority of the viewport. This experience is more of \textit{mixing} (even if that mixing is performed by the human mind and not by the device) than \textit{switching} to a complete/discrete environment at the exclusion of the other. With both the sitsim projects and VTW the user's view is always a mix, never purely virtual, and the position upon the locus of attention axis can never reach its virtual reality extreme, due to the fact that the screen is always seen as a part of the larger real environment whereas with an immersive VR display such as a HMD \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms clarifies how from the point of view of user experience, sitsim projects have been labelled as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
 
 %=========================================================================================================
 
