Added Leap Motion gesture RW/VR switch reference.

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -619,7 +619,9 @@ In order to best implement parallel reality, ascertaining the optimum manner in 
 
 Granting the user the ability to trigger transitions between different visual stimuli, including the ability to choose different styles of transition, requires the user to be provided with a control mechanism. This control mechanism needs to detract as little as possible from the user's ability to process the visual stimuli that they are receiving from the DK1 and as the camera solution mounted to the DK1 is set up in a manner such that looking at things close to the user (such as a physical control) in order to differentiate between different controls to trigger different styles of transition would be uncomfortable due to the heightened negative parallax (see section \ref{constraints_of_dk1_see_through_solution}), a control modality that can be quickly learned and then used by touch/memory is necessary.
 
-Using the smartphone upon which IndoorAtlas operates did not represent a good solution, as a lack of physical buttons upon modern smartphones means that triggering different transitions would require touching different areas of the screen - a task that would not be reliably performable without looking at the phone each time. As the smartphone must be held in the user's hand (placing it in a pocket or in the satchel was attempted, however a severe negative impact on the performance of IndoorAtlas was experienced) the control mechanism must be usable with the remaining single hand. An Xbox 360 controller is used to accomplish this goal. When held with just the right hand the controller features multiple push buttons and an analogue trigger accessible between the thumb and first finger. These buttons are easily distinguishable from each other via touch, due to their layout, while the provision of an analogue trigger allows for user controllable transition speeds in addition to simple binary control between two options. Pressing one of the buttons or pulling the trigger causes a transition to occur, while releasing the button or trigger causes a return to the default view.
+Using the smartphone upon which IndoorAtlas operates did not represent a good solution, as a lack of physical buttons upon modern smartphones means that triggering different transitions would require touching different areas of the screen - a task that would not be reliably performable without looking at the phone each time. As the smartphone must be held in the user's hand (placing it in a pocket or in the satchel was attempted, however a severe negative impact on the performance of IndoorAtlas was experienced) the control mechanism must be usable with the remaining single hand. An Xbox 360 controller is used to accomplish this goal. When held with just the right hand the controller features multiple push buttons and an analogue trigger accessible between the thumb and first finger. These buttons are easily distinguishable from each other via touch due to their layout, while the provision of an analogue trigger allows for user controllable transition speeds and pausing at intermediary positions in addition to simple binary control between two options. Pressing one of the buttons or pulling the trigger causes a transition to occur, while releasing the button or trigger causes a return to the default view.
+
+The Leap Motion hand tracking sensor was later used in a similar capacity to switch between VR and RW visuals, when attached to the front of an Oculus Rift DK2, by detecting a hand gesture moving down over its field of view\footnote{\url{http://blog.leapmotion.com/new-demo-switch-vr-real-world-simple-gesture/}}. Whilst this approach does not require the user to hold a controller, distinguishing between multiple gestures to control different transitions would prove more difficult both in terms of the user learning and correctly performing the gestures and in terms of the platform correctly recognising them. Occupying a position between VR and RW in the same manner that the trigger of the Xbox controller allows would require the user to keep their hand in front of the Leap Motion sensor and thus obscure part of the their view of the RW visuals.
 
 %=========================================================================================================
 
