Edits from begining through to end of chapter 2.

--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -2,9 +2,9 @@ Amongst others, thanks go to;
 
 \begin{itemize}
 
-	\item Alan Miller, Colin Allison, Miguel Nacenta and Ishbel Duncan for supervising my research.
+	\item Alan Miller, Colin Allison, Miguel Nacenta and Ishbel Duncan for supervising this research.
 	
-	\item EPSRC and the School of Computer Science for funding the endeavour.
+	\item EPSRC and the School of Computer Science at the University of St Andrews for funding the endeavour.
 	
 	\item Everybody in the Open Virtual Worlds research group for their contributions, both real and virtual.
 	
