Edits from through to end of chapter 3.

--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -22,6 +22,6 @@ Amongst others, thanks go to;
 	
 	\item Steven Lowson for being a best friend even though I never answer his calls.
 	
-	\item And finally my family, for not complaining too vehemently when I answered even fewer of theirs.
+	\item And finally my family for not complaining too vehemently when I answered even fewer of theirs.
 
 \end{itemize}
