Edits through to 4.4.

--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -8,6 +8,8 @@ Amongst others, thanks go to;
 	
 	\item Everybody in the Open Virtual Worlds research group for their contributions, both real and virtual.
 	
+	\item Richard Fawcett for his input to the reconstructions used within this research.
+	
 	\item My fellow research students, particularly the denizens of the venerable `Taint' chat; Ruth Hoffmann, Luke Hutton and Jonathan Ward.
 	
 	\item All of the staff at the School of Computer Science who made things that much more pleasant, academically or otherwise.
