Added boxplots of IndoorAtlas deltas (no discussion yet).

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -446,6 +446,16 @@ Additionally the positional and orientational accuracy were for the most part ev
 
 \TwoFig{Mirrorshades-close-comparison-1.png} {Using Mirrorshades to perform detailed comparison between real and virtual artefacts (1/2)} {Mirrorshades-close-comparison-1.png}
        {Mirrorshades-close-comparison-2.png} {Using Mirrorshades to perform detailed comparison between real and virtual artefacts (2/2)} {Mirrorshades-close-comparison-2.png}
+       
+\textbf{ADD DISCUSSION OF FIGURE \ref{1-positiondeltas.png} HERE.}
+
+\begin{figure}[ht]
+	\begin{center}
+		\includegraphics[width=.6\linewidth]{1/1-positiondeltas.png}
+		\caption{Distance between subsequent IndoorAtlas position data.}
+		\label{1-positiondeltas.png}
+	\end{center}
+\end{figure}
 
 %=========================================================================================================
 
@@ -1082,6 +1092,11 @@ Framerates throughout the stage 2.1 investigation were largely as was to be expe
 	\end{center}
 \end{figure}
 
+\textbf{DISCUSSION ABOUT FIGURES \ref{2-1-positiondeltas1-3.png} AND \ref{2-1-positiondeltas1-4.png} HERE.}
+
+\TwoFig{2.1/2-1-positiondeltas1-3.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-3.}{2-1-positiondeltas1-3.png}
+       {2.1/2-1-positiondeltas1-4.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-4.}{2-1-positiondeltas1-4.png}
+
 %=========================================================================================================
 
 \subsection{Stage 2.1 Summary}
@@ -1414,6 +1429,11 @@ Once again the seated VR scenario provided the highest framerates (for the 2x pa
 	\label{framerates_2-2.png}
 	\end{center}
 \end{figure}
+
+\textbf{DISCUSSION ABOUT FIGURES \ref{2-2-positiondeltas7525.png} AND \ref{2-2-positiondeltas5050.png} HERE.}
+
+\TwoFig{2.2/2-2-positiondeltas7525.png}{Distance between subsequent IndoorAtlas position data for scenario with 75/25 mix.}{2-2-positiondeltas7525.png}
+       {2.2/2-2-positiondeltas5050.png}{Distance between subsequent IndoorAtlas position data for scenario with 50/50 mix.}{2-2-positiondeltas5050.png}
 
 %=========================================================================================================
 
